--- a/Properties/Resources.es.resx
+++ b/Properties/Resources.es.resx
@@ -118,9 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="LoginSuccessfulMessage" xml:space="preserve">
-    <value>Login Successful!</value>
+    <value>"¡Inicio de sesión exitoso!"</value>
   </data>
   <data name="LoginErrorMessage" xml:space="preserve">
-    <value>Username and Password do not match.</value>
+    <value>El nombre de usuario y la contraseña no coinciden.</value>
   </data>
 </root>
